# HopfieldNetwork

./: .gitignore  CMakeLists.txt  Components.cpp  GraphicsManager.cpp  GraphicsManager.hpp  HopfieldAlgorithm.cpp  HopfieldAlgorithm.h  HopfieldNetwork.test.cpp  Pattern.cpp  Pattern.h  README.md  TantiPattern.cpp  TantiPattern.h  a.out  aaa.hpp  corrotto.cpp  corrotto.h  funzioni.test  funzioni.test.cpp  funzioni.test2.cpp  imgui.ini  lsan.supp  main  main.2cpp  main.cpp  quadro.cpp  quadro.h  relazione.tex  run_application.hpp  temp  test.training
GraphicsManager/: Components.cpp  FileDialogHelper.cpp  GraphicsManager.cpp  GraphicsManager.hpp
HopfieldSimulator/: CoherenceSetPattern.cpp  CoherenceSetPattern.hpp  EvolvingPattern.cpp  EvolvingPattern.hpp  HopfieldNetwork.cpp  HopfieldNetwork.hpp  HopfieldSimulator.cpp  HopfieldSimulator.hpp  ITrainingPattern.hpp  ImageTrainingPattern.cpp  MathDimension.hpp  NoisyPattern.cpp  NoisyPattern.hpp  RandomTrainingPattern.cpp  TrainingPattern.cpp  TrainingPattern.hpp  cast.hpp
HopfieldSimulator/math/: Cast.hpp  MathDimension.hpp  RandomUtils.hpp
tests/: Cast.test.cpp  CoherenceSetPattern.test.cpp  EvolvingPattern.test.cpp  HopfieldNetwork.test.cpp  HopfieldSimulator.test.cpp  MathDimension.test.cpp  NoisyPattern.test.cpp  RandomUtils.test.cpp  TrainingPattern.test.cpp
